// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectableCardField should render correctly 1`] = `
<DocumentFragment>
  .cache-gy87p5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-gy87p5[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.cache-gy87p5[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-gy87p5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-gy87p5:hover:not([data-error='true']):not([data-disabled='true']),
.cache-gy87p5:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-gy87p5:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.cache-gy87p5:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-gy87p5:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-gy87p5:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-di922d-StyledRadio {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-di922d-StyledRadio[aria-disabled='false'],
.cache-di922d-StyledRadio[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-di922d-StyledRadio[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2+.ehkrmld3 {
  fill: #8c40ef;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2+.ehkrmld3 .ehkrmld5 {
  fill: #e5dbfd;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2[aria-invalid='true']+.ehkrmld3 {
  fill: #b3144d;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2[aria-invalid='true']+.ehkrmld3 .ehkrmld5 {
  fill: #ffd3e3;
}

.cache-di922d-StyledRadio[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-di922d-StyledRadio[aria-disabled='true']>label,
.cache-di922d-StyledRadio[aria-disabled='true'] .ehkrmld2 {
  cursor: not-allowed;
}

.cache-di922d-StyledRadio[aria-disabled='true'] .ehkrmld3 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-di922d-StyledRadio[aria-disabled='true'] .ehkrmld3 .ehkrmld5 {
  fill: #f3f3f4;
}

.cache-di922d-StyledRadio[data-checked='true'] {
  color: #641cb3;
}

.cache-di922d-StyledRadio[data-error='true'] {
  color: #b3144d;
}

.cache-di922d-StyledRadio[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-di922d-StyledRadio input+svg {
  display: none;
}

.cache-di922d-StyledRadio label {
  display: none;
}

.cache-18dasel {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-18dasel+.ehkrmld3 .ehkrmld4 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18dasel:checked+svg .ehkrmld4 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18dasel:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld3 {
  fill: #8c40ef;
}

.cache-18dasel[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld3 {
  fill: #e51963;
}

.cache-18dasel[aria-disabled='false']:active+.ehkrmld3 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-18dasel[aria-disabled='false']:active+.ehkrmld3 .ehkrmld5 {
  fill: #f1eefc;
}

.cache-18dasel[aria-disabled='false']:focus-visible+.ehkrmld3 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-18dasel[aria-invalid='true']:focus+.ehkrmld3 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-18dasel[aria-invalid='true']:focus+.ehkrmld3 .ehkrmld5 {
  fill: #ffebf2;
}

.cache-1wocwtm {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1wocwtm .ehkrmld5 {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-gy87p5 e1s5n3hj1"
      data-checked="false"
      data-disabled="false"
      data-error="false"
    >
      <div
        class="cache-16otux ehpbis70"
      >
        <div
          aria-disabled="false"
          class="e1s5n3hj2 cache-di922d-StyledRadio ehkrmld1"
          data-checked="false"
          data-error="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="cache-18dasel ehkrmld2"
            id="test-test"
            name="test"
            type="radio"
            value="test"
          />
          <svg
            class="cache-1wocwtm ehkrmld3"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="cache-0 ehkrmld5"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="cache-0 ehkrmld4"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
      Radio field
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-gy87p5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-gy87p5[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.cache-gy87p5[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-gy87p5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-gy87p5:hover:not([data-error='true']):not([data-disabled='true']),
.cache-gy87p5:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-gy87p5:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.cache-gy87p5:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-gy87p5:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-gy87p5:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-di922d-StyledRadio {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-di922d-StyledRadio[aria-disabled='false'],
.cache-di922d-StyledRadio[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-di922d-StyledRadio[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2+.ehkrmld3 {
  fill: #8c40ef;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2+.ehkrmld3 .ehkrmld5 {
  fill: #e5dbfd;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2[aria-invalid='true']+.ehkrmld3 {
  fill: #b3144d;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2[aria-invalid='true']+.ehkrmld3 .ehkrmld5 {
  fill: #ffd3e3;
}

.cache-di922d-StyledRadio[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-di922d-StyledRadio[aria-disabled='true']>label,
.cache-di922d-StyledRadio[aria-disabled='true'] .ehkrmld2 {
  cursor: not-allowed;
}

.cache-di922d-StyledRadio[aria-disabled='true'] .ehkrmld3 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-di922d-StyledRadio[aria-disabled='true'] .ehkrmld3 .ehkrmld5 {
  fill: #f3f3f4;
}

.cache-di922d-StyledRadio[data-checked='true'] {
  color: #641cb3;
}

.cache-di922d-StyledRadio[data-error='true'] {
  color: #b3144d;
}

.cache-di922d-StyledRadio[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-di922d-StyledRadio input+svg {
  display: none;
}

.cache-di922d-StyledRadio label {
  display: none;
}

.cache-18dasel {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-18dasel+.ehkrmld3 .ehkrmld4 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18dasel:checked+svg .ehkrmld4 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18dasel:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld3 {
  fill: #8c40ef;
}

.cache-18dasel[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld3 {
  fill: #e51963;
}

.cache-18dasel[aria-disabled='false']:active+.ehkrmld3 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-18dasel[aria-disabled='false']:active+.ehkrmld3 .ehkrmld5 {
  fill: #f1eefc;
}

.cache-18dasel[aria-disabled='false']:focus-visible+.ehkrmld3 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-18dasel[aria-invalid='true']:focus+.ehkrmld3 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-18dasel[aria-invalid='true']:focus+.ehkrmld3 .ehkrmld5 {
  fill: #ffebf2;
}

.cache-1wocwtm {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1wocwtm .ehkrmld5 {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-gy87p5 e1s5n3hj1"
      data-checked="true"
      data-disabled="false"
      data-error="false"
    >
      <div
        class="cache-16otux ehpbis70"
      >
        <div
          aria-disabled="false"
          class="e1s5n3hj2 cache-di922d-StyledRadio ehkrmld1"
          data-checked="true"
          data-error="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            checked=""
            class="cache-18dasel ehkrmld2"
            id="test-checked"
            name="test"
            type="radio"
            value="checked"
          />
          <svg
            class="cache-1wocwtm ehkrmld3"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="cache-0 ehkrmld5"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="cache-0 ehkrmld4"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
      Radio field checked
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-gy87p5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-gy87p5[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.cache-gy87p5[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-gy87p5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-gy87p5:hover:not([data-error='true']):not([data-disabled='true']),
.cache-gy87p5:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-gy87p5:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.cache-gy87p5:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-gy87p5:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-gy87p5:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-di922d-StyledRadio {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-di922d-StyledRadio[aria-disabled='false'],
.cache-di922d-StyledRadio[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-di922d-StyledRadio[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2+.ehkrmld3 {
  fill: #8c40ef;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2+.ehkrmld3 .ehkrmld5 {
  fill: #e5dbfd;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2[aria-invalid='true']+.ehkrmld3 {
  fill: #b3144d;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2[aria-invalid='true']+.ehkrmld3 .ehkrmld5 {
  fill: #ffd3e3;
}

.cache-di922d-StyledRadio[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-di922d-StyledRadio[aria-disabled='true']>label,
.cache-di922d-StyledRadio[aria-disabled='true'] .ehkrmld2 {
  cursor: not-allowed;
}

.cache-di922d-StyledRadio[aria-disabled='true'] .ehkrmld3 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-di922d-StyledRadio[aria-disabled='true'] .ehkrmld3 .ehkrmld5 {
  fill: #f3f3f4;
}

.cache-di922d-StyledRadio[data-checked='true'] {
  color: #641cb3;
}

.cache-di922d-StyledRadio[data-error='true'] {
  color: #b3144d;
}

.cache-di922d-StyledRadio[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-di922d-StyledRadio input+svg {
  display: none;
}

.cache-di922d-StyledRadio label {
  display: none;
}

.cache-18dasel {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-18dasel+.ehkrmld3 .ehkrmld4 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18dasel:checked+svg .ehkrmld4 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18dasel:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld3 {
  fill: #8c40ef;
}

.cache-18dasel[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld3 {
  fill: #e51963;
}

.cache-18dasel[aria-disabled='false']:active+.ehkrmld3 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-18dasel[aria-disabled='false']:active+.ehkrmld3 .ehkrmld5 {
  fill: #f1eefc;
}

.cache-18dasel[aria-disabled='false']:focus-visible+.ehkrmld3 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-18dasel[aria-invalid='true']:focus+.ehkrmld3 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-18dasel[aria-invalid='true']:focus+.ehkrmld3 .ehkrmld5 {
  fill: #ffebf2;
}

.cache-1wocwtm {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1wocwtm .ehkrmld5 {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-gy87p5 e1s5n3hj1"
      data-checked="false"
      data-disabled="true"
      data-error="false"
    >
      <div
        class="cache-16otux ehpbis70"
      >
        <div
          aria-disabled="true"
          class="e1s5n3hj2 cache-di922d-StyledRadio ehkrmld1"
          data-checked="false"
          data-error="false"
        >
          <input
            aria-disabled="true"
            aria-invalid="false"
            class="cache-18dasel ehkrmld2"
            disabled=""
            id="test-disabled"
            name="test"
            type="radio"
            value="disabled"
          />
          <svg
            class="cache-1wocwtm ehkrmld3"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="cache-0 ehkrmld5"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="cache-0 ehkrmld4"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
      Radio field disabled
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly with errors 1`] = `
<DocumentFragment>
  .cache-gy87p5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-gy87p5[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.cache-gy87p5[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-gy87p5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-gy87p5:hover:not([data-error='true']):not([data-disabled='true']),
.cache-gy87p5:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-gy87p5:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.cache-gy87p5:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-gy87p5:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-gy87p5:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-di922d-StyledRadio {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-di922d-StyledRadio[aria-disabled='false'],
.cache-di922d-StyledRadio[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-di922d-StyledRadio[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2+.ehkrmld3 {
  fill: #8c40ef;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2+.ehkrmld3 .ehkrmld5 {
  fill: #e5dbfd;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2[aria-invalid='true']+.ehkrmld3 {
  fill: #b3144d;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2[aria-invalid='true']+.ehkrmld3 .ehkrmld5 {
  fill: #ffd3e3;
}

.cache-di922d-StyledRadio[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-di922d-StyledRadio[aria-disabled='true']>label,
.cache-di922d-StyledRadio[aria-disabled='true'] .ehkrmld2 {
  cursor: not-allowed;
}

.cache-di922d-StyledRadio[aria-disabled='true'] .ehkrmld3 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-di922d-StyledRadio[aria-disabled='true'] .ehkrmld3 .ehkrmld5 {
  fill: #f3f3f4;
}

.cache-di922d-StyledRadio[data-checked='true'] {
  color: #641cb3;
}

.cache-di922d-StyledRadio[data-error='true'] {
  color: #b3144d;
}

.cache-di922d-StyledRadio[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-di922d-StyledRadio input+svg {
  display: none;
}

.cache-di922d-StyledRadio label {
  display: none;
}

.cache-18dasel {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-18dasel+.ehkrmld3 .ehkrmld4 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18dasel:checked+svg .ehkrmld4 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18dasel:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld3 {
  fill: #8c40ef;
}

.cache-18dasel[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld3 {
  fill: #e51963;
}

.cache-18dasel[aria-disabled='false']:active+.ehkrmld3 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-18dasel[aria-disabled='false']:active+.ehkrmld3 .ehkrmld5 {
  fill: #f1eefc;
}

.cache-18dasel[aria-disabled='false']:focus-visible+.ehkrmld3 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-18dasel[aria-invalid='true']:focus+.ehkrmld3 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-18dasel[aria-invalid='true']:focus+.ehkrmld3 .ehkrmld5 {
  fill: #ffebf2;
}

.cache-1wocwtm {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1wocwtm .ehkrmld5 {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-gy87p5 e1s5n3hj1"
      data-checked="false"
      data-disabled="false"
      data-error="true"
    >
      <div
        class="cache-16otux ehpbis70"
      >
        <div
          aria-disabled="false"
          class="e1s5n3hj2 cache-di922d-StyledRadio ehkrmld1"
          data-checked="false"
          data-error="true"
        >
          <input
            aria-disabled="false"
            aria-invalid="true"
            class="cache-18dasel ehkrmld2"
            id="test-checked"
            name="test"
            type="radio"
            value="checked"
          />
          <svg
            class="cache-1wocwtm ehkrmld3"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="cache-0 ehkrmld5"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="cache-0 ehkrmld4"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
      Radio field error
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-gy87p5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
}

.cache-gy87p5[data-checked='true'] {
  border: 1px solid #8c40ef;
}

.cache-gy87p5[data-error='true'] {
  border: 1px solid #b3144d;
}

.cache-gy87p5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-gy87p5:hover:not([data-error='true']):not([data-disabled='true']),
.cache-gy87p5:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-gy87p5:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #8c40ef;
}

.cache-gy87p5:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-gy87p5:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-gy87p5:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #f6f3ffcc;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-di922d-StyledRadio {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-di922d-StyledRadio[aria-disabled='false'],
.cache-di922d-StyledRadio[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-di922d-StyledRadio[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2+.ehkrmld3 {
  fill: #8c40ef;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2+.ehkrmld3 .ehkrmld5 {
  fill: #e5dbfd;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2[aria-invalid='true']+.ehkrmld3 {
  fill: #b3144d;
}

.cache-di922d-StyledRadio:hover[aria-disabled='false'] .ehkrmld2[aria-invalid='true']+.ehkrmld3 .ehkrmld5 {
  fill: #ffd3e3;
}

.cache-di922d-StyledRadio[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-di922d-StyledRadio[aria-disabled='true']>label,
.cache-di922d-StyledRadio[aria-disabled='true'] .ehkrmld2 {
  cursor: not-allowed;
}

.cache-di922d-StyledRadio[aria-disabled='true'] .ehkrmld3 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-di922d-StyledRadio[aria-disabled='true'] .ehkrmld3 .ehkrmld5 {
  fill: #f3f3f4;
}

.cache-di922d-StyledRadio[data-checked='true'] {
  color: #641cb3;
}

.cache-di922d-StyledRadio[data-error='true'] {
  color: #b3144d;
}

.cache-di922d-StyledRadio[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-di922d-StyledRadio input+svg {
  display: none;
}

.cache-di922d-StyledRadio label {
  display: none;
}

.cache-18dasel {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-18dasel+.ehkrmld3 .ehkrmld4 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-18dasel:checked+svg .ehkrmld4 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-18dasel:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld3 {
  fill: #8c40ef;
}

.cache-18dasel[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld3 {
  fill: #e51963;
}

.cache-18dasel[aria-disabled='false']:active+.ehkrmld3 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-18dasel[aria-disabled='false']:active+.ehkrmld3 .ehkrmld5 {
  fill: #f1eefc;
}

.cache-18dasel[aria-disabled='false']:focus-visible+.ehkrmld3 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-18dasel[aria-invalid='true']:focus+.ehkrmld3 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-18dasel[aria-invalid='true']:focus+.ehkrmld3 .ehkrmld5 {
  fill: #ffebf2;
}

.cache-1wocwtm {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1wocwtm .ehkrmld5 {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      class="cache-gy87p5 e1s5n3hj1"
      data-checked="true"
      data-disabled="false"
      data-error="false"
    >
      <div
        class="cache-16otux ehpbis70"
      >
        <div
          aria-disabled="false"
          class="e1s5n3hj2 cache-di922d-StyledRadio ehkrmld1"
          data-checked="true"
          data-error="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="cache-18dasel ehkrmld2"
            id="test-events"
            name="test"
            type="radio"
            value="events"
          />
          <svg
            class="cache-1wocwtm ehkrmld3"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="cache-0 ehkrmld5"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="cache-0 ehkrmld4"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
      Radio field events
    </div>
  </form>
</DocumentFragment>
`;
